--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body style="text-align: center; padding: 0; border: 0; margin: 0;">
     <canvas id="unity-canvas" width=600 height=800 tabindex="-1" style="width: 600px; height: 800px; background: #231F20"></canvas>
-    <script src="Build/bb build testing.loader.js"></script>
+    <script src="Build/SenseiMayhem.loader.js"></script>
     <script>
       if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
         // Mobile device style: fill the whole browser client area with the game canvas:
@@ -25,9 +25,9 @@
       }
 
       createUnityInstance(document.querySelector("#unity-canvas"), {
-        dataUrl: "Build/bb build testing.data.br",
-        frameworkUrl: "Build/bb build testing.framework.js.br",
-        codeUrl: "Build/bb build testing.wasm.br",
+        dataUrl: "Build/SenseiMayhem.data.br",
+        frameworkUrl: "Build/SenseiMayhem.framework.js.br",
+        codeUrl: "Build/SenseiMayhem.wasm.br",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "WillMlair-BlackBeltProject",
