--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
       }
 
       createUnityInstance(document.querySelector("#unity-canvas"), {
-        dataUrl: "Build/SenseiMayhem.data.br",
-        frameworkUrl: "Build/SenseiMayhem.framework.js.br",
-        codeUrl: "Build/SenseiMayhem.wasm.br",
+        dataUrl: "Build/SenseiMayhem.data",
+        frameworkUrl: "Build/SenseiMayhem.framework.js",
+        codeUrl: "Build/SenseiMayhem.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "WillMlair-BlackBeltProject",
